--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,13 +1,5 @@
 <h1>id: <%= @task.id %>の編集ページ</h1>
 
-<%= form_for(@task) do |f| %>
-
-<%= f.label :content, 'タスク' %>
-
-<%= f.text_field :content %>
-
-<%= f.submit '入力' %>
-
-<% end %>
+<%= render 'form', message: @message %>
 
 <%= link_to 'タスク一覧' , tasks_path %>
