--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -9,6 +9,8 @@
     </div>
   <% end %>
   
+  <%= f.label :status, 'ステイタス' %>
+  <%= f.text_field :status %>
   
   <%= f.label :content, 'タスク' %>
   <%= f.text_field :content %>
