--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>id: <%= @task.id %>の編集ページ</h1>
 
-<%= render 'form', message: @message %>
+<%= render 'form', task: @task %>
 
 <%= link_to 'タスク一覧' , tasks_path %>
