--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,7 +5,7 @@
   
   <li>
     
-    <%=link_to task.id, task %> : <%= task.content %>
+    <%=link_to task.id, task %> : <%=task.status %> &gt; <%= task.content %>
     
   </li>
   
